--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <title>Personal Portfolio | Levin </title>  
 </head>
 <body>
+    <!-- main container to house all contents -->
     <div class="main">
+
+
+        <!-- navigation bar -->
         <nav class="navbar  navbar-light">
             <div class="container-fluid">
               <a class="navbar-brand nav-link disabled"  href="#" >Personal</a>
@@ -23,8 +27,25 @@
             </ul>
             </div>
           </nav>
+          <!-- main homepage -->
+          <div class="row">
+              <!-- the hey text -->
+            <div class="col-6 col6  bg-body rounded">
+                <h1>Hey! I Am <br><span>Cathy Thomas</span></h1>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus reprehenderit culpa id quae inventore consectetur sint distinctio praesentium, iusto eligendi.</p>
+                <a href="" class="btn2 btn shadow">Hire Me &rarr;</a>
+    
+            </div>
+            <!-- the pics div -->
+            <div class="col-6 col62  bg-body rounded">
+                <div class="img-box">
+                    <img src="images/pattern.png" class="back-img">
+                    <img src="images/girl.png" class="main-img">
+                </div>
+            </div>
+          </div>
+        </div>
 
-        <h1>Lorem ipsum dolor sit amet.</h1>
 
 
 
