--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
             <div class="col-6 col6  bg-body rounded">
                 <h1>My Awesome <span>Services</span></h1>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus reprehenderit culpa id quae inventore consectetur sint distinctio praesentium, iusto eligendi.</p>
-                <a href="" class="btn2 btn3 btn shadow">Download CV</a>
-    
+                <a href="" class="btn2 cvv btn3 btn shadow">Download CV</a>
             </div>
             <div class="col-2 shadow col4 ">
             </div>
