--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               
             </div>
             <div class="col-2 shadow col4 col5 ">
-              <div class="col-2 shadow col4 col7 ">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, praesentium.</p>
               
             </div>
           </div>
